--- a/src/pages/main/sass/aboutShelter.scss
+++ b/src/pages/main/sass/aboutShelter.scss
@@ -15,6 +15,7 @@
         color: #545454;
         font-size: 35px;
         margin-top: 0;
+        margin-bottom: 0;
 
         font-family: 'Georgia', serif;
         font-style: normal;
