--- a/src/pages/main/sass/media.scss
+++ b/src/pages/main/sass/media.scss
@@ -115,3 +115,176 @@
         margin-top: 33px;
     }
 }
+@media(max-width: 768px) {
+    .heading {
+        font-size: 25px;
+    }
+    .container {
+        &__main {
+            width: 300px;
+        }
+        &__about {
+            width: 300px;
+        }
+        &__help {
+            width: 290px;
+        }
+        &__footer {
+            width: 300px;
+        }
+    }
+    main {
+        height: 823px;
+        padding: 30px 10px 0px 10px;
+    }
+    .nav__container {
+        display: none;
+    }
+    .main {
+        &__heading {
+            font-size: 25px;
+            text-align: center;
+            max-width: 280px;
+            margin: 60px auto 0px auto;
+        }
+        &__subheading {
+            text-align: center;
+        }
+    }
+    .btn__primary {
+        display: block;
+        margin: 42px auto 0px auto;
+    }
+    .header__info {
+        width: 300px;
+        height: 296px;
+    }
+    .logo{
+        &__dog {
+            width: 260px;
+            height: 271.77px;
+            right: 10px;
+        }
+    }
+    .about {
+        height: 974px;
+        padding: 42px 10px;
+        &__info {
+            width: 100%;
+            height: 494px;
+            margin-bottom: 0;
+            padding: 0 15px;
+        }
+        &__heading {
+            width: 100%;
+            font-size: 25px;
+            text-align: center;
+        }
+        &__subheading {
+            line-height: 160%;
+            text-align: justify;
+        }
+        &__subheading:nth-child(3) {
+            margin-top: 22px;
+        }
+        &__dog {
+            width: 260px;
+            margin-top: 42px;
+        }
+    }
+    .homeless {
+        padding: 42px 10px;
+        height: 791px;
+        &__heading {
+            width: 100%;
+        }
+    }
+    .slider {
+        &__item:nth-child(2) {
+            display: none;
+        }
+        &__item {
+            margin: 42px auto 20px auto;
+        }
+    }
+    .help {
+        height: 745px;
+        padding: 42px 15px;
+        &__wrapper {
+            margin-top: 42px;
+            width: 100%;
+        }
+        &__heading {
+            width: 100%;
+        }
+        &__item, &__item:nth-child(2), &__item:nth-child(5), &__item:nth-child(8), &__item:nth-child(4), &__item:nth-child(6), &__item:nth-child(7), &__item:nth-child(9) {
+            margin: 0;
+            margin-top: 30px;
+            width: 130px;
+            height: 87px;
+        }
+        &__item:nth-child(1), &__item:nth-child(2) {
+            margin-top: 0;
+        }
+        &__descr {
+            font-size: 15px;
+            margin-top: 20px;
+        }
+        &__png {
+            height: 50px;
+            width: 50px;
+        }
+    }
+    .donation {
+        padding: 42px 10px;
+        height: 542.2px;
+        &__dog {
+            width: 260px;
+            margin-top: 42px;
+        }
+        &__info {
+            width: 100%;
+            height: 281px;
+        }
+        &__heading {
+            width: 100%;
+            text-align: center;
+        }
+        &__bank {
+            line-height: 160%;
+            letter-spacing: 0;
+            text-align: center;
+        }
+        &__input {
+            width: 281px;
+            margin: 0 auto;
+        }
+        &__card {
+            width: 220px;
+            font-size: 15px;
+        }
+        &__legal {
+            width: 280px;
+            height: 90px;
+        }
+    }
+    .footer {
+        padding: 30px 10px 0px 10px;
+        height: 809px;
+        width: 100%;
+        &__info:nth-child(1) {
+            margin: 0;
+        }
+        &__heading {
+            text-align: center;
+        }
+        &__dog {
+            width: 260px;
+            height: 269px;
+            margin-top: 40px;
+        }
+    }
+    .item {
+        justify-content: center;
+    }
+}
