--- a/src/pages/main/sass/footer.scss
+++ b/src/pages/main/sass/footer.scss
@@ -5,6 +5,7 @@
     position: relative;
     height: 350px;
     padding: 40px;
+    width: 100%;
     &__info {
         max-width: 310px;
         height: 234px;
