--- a/src/pages/main/css/style.css
+++ b/src/pages/main/css/style.css
@@ -383,6 +383,7 @@ header {
   position: relative;
   height: 350px;
   padding: 40px;
+  width: 100%;
 }
 .footer__info {
   max-width: 310px;
@@ -507,7 +508,7 @@ header {
     margin: 0 auto;
   }
   .footer {
-    width: 768px;
+    width: 100%;
     height: 639px;
     padding: 30px;
     padding-bottom: 0;
