--- a/src/pages/main/sass/media.scss
+++ b/src/pages/main/sass/media.scss
@@ -92,7 +92,7 @@
     }
 
     .footer {
-        width: 768px;
+        width: 100%;
         height: 639px;
         padding: 30px;
         padding-bottom: 0;
