--- a/src/pages/main/css/style.css
+++ b/src/pages/main/css/style.css
@@ -34,6 +34,17 @@ h5 {
   justify-content: space-between;
 }
 
+.hamburger {
+  display: none;
+  color: #F1CDB3;
+  width: 30px;
+  height: 22px;
+  position: absolute;
+  right: 53px;
+  font-size: 40px;
+  cursor: pointer;
+}
+
 .heading {
   width: 370px;
   letter-spacing: 0.06em;
@@ -44,6 +55,20 @@ h5 {
   font-style: normal;
   font-weight: 400;
   line-height: 130%;
+}
+
+a {
+  text-decoration: none;
+}
+
+.hide {
+  left: 100%;
+  transition-duration: 0;
+}
+
+.hide__r {
+  left: -100%;
+  transition-duration: 0;
 }
 
 main {
@@ -152,14 +177,17 @@ header {
   align-items: center;
   padding: 15px 45px;
   border: 0;
+  margin-top: 42px;
+  cursor: pointer;
+}
+
+.btn__text {
   color: #292929;
   font-family: "Georgia";
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
   line-height: 130%;
-  margin-top: 42px;
-  cursor: pointer;
 }
 
 .about {
@@ -208,18 +236,43 @@ header {
   margin: 0 auto;
 }
 
-.slider {
+.slider__wrapper {
+  position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  height: 435px;
+  margin: 60px 0;
+}
+.slider__round {
+  position: absolute;
+  width: 52px;
+  height: 52px;
+  border: 2px solid #F1CDB3;
+  border-radius: 100px;
+  cursor: pointer;
+}
+.slider__next {
+  right: 40px;
+}
+.slider__prev {
+  left: 40px;
+}
+.slider__indicator {
+  text-align: center;
+  color: #000;
+  font-size: 20px;
+  transform: translateY(45%);
 }
 .slider__item {
-  box-sizing: border-box;
+  position: absolute;
   width: 270px;
   max-height: 435px;
   background: #FAFAFA;
   border-radius: 9px;
-  margin: 60px 90px;
   height: 435px;
+  transition-duration: 0s;
 }
 .slider__img {
   width: 100%;
@@ -268,6 +321,24 @@ header {
   border: 0;
   margin: 0 auto;
   cursor: pointer;
+}
+
+.first-slide {
+  left: 25%;
+  transform: translateX(-50%);
+  transition-duration: 0.5s;
+}
+
+.second-slide {
+  left: 50%;
+  transform: translateX(-50%);
+  transition-duration: 0.5s;
+}
+
+.third-slide {
+  left: 75%;
+  transform: translateX(-50%);
+  transition-duration: 0.5s;
 }
 
 .help {
@@ -434,12 +505,6 @@ header {
   .container__help {
     width: 630px;
   }
-  .container__footer {
-    width: 708px;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 100%;
-  }
   main {
     height: 1165px;
     padding: 30px;
@@ -507,45 +572,26 @@ header {
   .donation__info {
     margin: 0 auto;
   }
-  .footer {
-    width: 100%;
-    height: 639px;
-    padding: 30px;
-    padding-bottom: 0;
-  }
-  .footer__dog {
-    margin: 0;
-    display: block;
-    height: 310px;
-    margin-top: 65px;
-  }
-  .footer__info:first-child {
-    margin-right: 60px;
-    width: 290px;
-  }
-  .footer__heading {
-    font-size: 33px;
-    margin-top: 0;
-  }
-  .item:nth-child(3), .item:nth-child(2) {
-    margin-top: 33px;
+  .hamburger {
+    display: none;
   }
 }
 @media (max-width: 768px) {
   .heading {
     font-size: 25px;
   }
+  .hamburger {
+    display: block;
+  }
   .container__main {
     width: 300px;
+    margin: 0;
   }
   .container__about {
     width: 300px;
   }
   .container__help {
     width: 290px;
-  }
-  .container__footer {
-    width: 300px;
   }
   main {
     height: 823px;
@@ -675,6 +721,42 @@ header {
   .donation__legal {
     width: 280px;
     height: 90px;
+  }
+}
+@media (max-width: 1280px) {
+  .container__footer {
+    width: 708px;
+    flex-wrap: wrap;
+    justify-content: center;
+    height: 100%;
+  }
+  .footer {
+    width: 100%;
+    height: 639px;
+    padding: 30px;
+    padding-bottom: 0;
+  }
+  .footer__dog {
+    margin: 0;
+    display: block;
+    height: 310px;
+    margin-top: 65px;
+  }
+  .footer__info:first-child {
+    margin-right: 60px;
+    width: 290px;
+  }
+  .footer__heading {
+    font-size: 33px;
+    margin-top: 0;
+  }
+  .item:nth-child(3), .item:nth-child(2) {
+    margin-top: 33px;
+  }
+}
+@media (max-width: 768px) {
+  .container__footer {
+    width: 300px;
   }
   .footer {
     padding: 30px 10px 0px 10px;
