--- a/src/pages/main/sass/media.scss
+++ b/src/pages/main/sass/media.scss
@@ -10,12 +10,6 @@
         &__help {
             width: 630px;
         }
-        &__footer {
-            width: 708px;
-            flex-wrap: wrap;
-            justify-content: center;
-            height: 100%;
-        }
     }
     main {
         height: 1165px;
@@ -89,48 +83,29 @@
         &__info {
             margin: 0 auto;
         }
-    }
-
-    .footer {
-        width: 100%;
-        height: 639px;
-        padding: 30px;
-        padding-bottom: 0;
-        &__dog {
-            margin: 0;
-            display: block;
-            height: 310px;
-            margin-top: 65px;
-        }
-        &__info:first-child {
-            margin-right: 60px;
-            width: 290px;
-        }
-        &__heading {
-            font-size: 33px;
-            margin-top: 0;
-        }
-    }
-    .item:nth-child(3), .item:nth-child(2) {
-        margin-top: 33px;
+    }  
+    .hamburger {
+        display: none;
     }
 }
+
 @media(max-width: 768px) {
     .heading {
         font-size: 25px;
     }
+    .hamburger {
+        display: block;
+    }
     .container {
         &__main {
             width: 300px;
+            margin: 0;
         }
         &__about {
             width: 300px;
         }
         &__help {
             width: 290px;
-        }
-        &__footer {
-            width: 300px;
         }
     }
     main {
@@ -267,24 +242,5 @@
             width: 280px;
             height: 90px;
         }
-    }
-    .footer {
-        padding: 30px 10px 0px 10px;
-        height: 809px;
-        width: 100%;
-        &__info:nth-child(1) {
-            margin: 0;
-        }
-        &__heading {
-            text-align: center;
-        }
-        &__dog {
-            width: 260px;
-            height: 269px;
-            margin-top: 40px;
-        }
-    }
-    .item {
-        justify-content: center;
     }
 }
