--- a/src/pages/main/css/style.css
+++ b/src/pages/main/css/style.css
@@ -62,13 +62,7 @@ a {
 }
 
 .hide {
-  left: 100%;
-  transition-duration: 0;
-}
-
-.hide__r {
-  left: -100%;
-  transition-duration: 0;
+  display: none;
 }
 
 main {
@@ -236,22 +230,32 @@ header {
   margin: 0 auto;
 }
 
-.slider__wrapper {
-  position: relative;
+.slider {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  width: 1200px;
+  margin: 0 auto;
+}
+.slider__wrapper {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  overflow: hidden;
+  width: 990px;
   height: 435px;
-  margin: 60px 0;
+  margin: 60px 53px;
 }
 .slider__round {
-  position: absolute;
   width: 52px;
   height: 52px;
   border: 2px solid #F1CDB3;
   border-radius: 100px;
+  margin-top: 252px;
   cursor: pointer;
+  transition-duration: 0.3s;
+}
+.slider__round:hover {
+  background: #FDDCC4;
+  border: 0;
 }
 .slider__next {
   right: 40px;
@@ -263,16 +267,17 @@ header {
   text-align: center;
   color: #000;
   font-size: 20px;
-  transform: translateY(45%);
+  margin-top: 50%;
+  transform: translateY(-50%);
 }
 .slider__item {
-  position: absolute;
   width: 270px;
   max-height: 435px;
   background: #FAFAFA;
   border-radius: 9px;
   height: 435px;
-  transition-duration: 0s;
+  transition-duration: 0.5s;
+  cursor: pointer;
 }
 .slider__img {
   width: 100%;
@@ -303,7 +308,12 @@ header {
   border-radius: 100px;
   background-color: #fff;
   margin: 0 auto;
+  transition-duration: 0.3s;
   cursor: pointer;
+}
+.slider__more:hover, .slider__more_active {
+  background: #FDDCC4;
+  border: 0;
 }
 
 .btn__under-slider {
@@ -323,22 +333,9 @@ header {
   cursor: pointer;
 }
 
-.first-slide {
-  left: 25%;
-  transform: translateX(-50%);
-  transition-duration: 0.5s;
-}
-
-.second-slide {
-  left: 50%;
-  transform: translateX(-50%);
-  transition-duration: 0.5s;
-}
-
-.third-slide {
-  left: 75%;
-  transform: translateX(-50%);
-  transition-duration: 0.5s;
+.btn__under-slider:hover {
+  background: #FDDCC4;
+  border: 0;
 }
 
 .help {
@@ -494,7 +491,109 @@ header {
   width: 310px;
 }
 
-@media (max-width: 1280px) {
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(41, 41, 41, 0.6);
+}
+.modal__container {
+  position: relative;
+  width: 952px;
+  margin: 10% auto;
+  height: 552px;
+}
+.modal__round {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 0;
+  text-align: center;
+}
+.modal__close {
+  text-align: center;
+}
+.modal__window {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 500px;
+  width: 900px;
+  margin: 0 auto;
+  background: #fff;
+  display: flex;
+}
+.modal__img {
+  width: 500px;
+  height: 500px;
+}
+.modal__info {
+  width: 351px;
+  height: 362px;
+  margin-top: 50px;
+  margin-left: 29px;
+}
+.modal__info_name {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 130%;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal__info_type {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 115%;
+  margin-top: 10px;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal__info_descr {
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  margin-top: 40px;
+  letter-spacing: 0.06em;
+  color: #000000;
+}
+.modal__ul {
+  margin-top: 40px;
+  padding-left: 13px;
+}
+.modal__li {
+  color: #000;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+  margin-bottom: 10px;
+}
+
+.big__text {
+  color: #000;
+  font-family: "Georgia";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 110%;
+  letter-spacing: 0.06em;
+}
+
+li {
+  color: #F1CDB3;
+}
+
+@media (max-width: 1279px) {
   .container__main {
     width: 708px;
   }
@@ -514,7 +613,10 @@ header {
     margin-top: 0px;
   }
   .logo__dog {
-    left: auto;
+    display: block;
+    position: static;
+    margin-top: 100px;
+    margin-left: 139px;
     right: 30px;
     width: 569px;
     height: 593px;
@@ -537,8 +639,12 @@ header {
     padding: 0;
     width: 300px;
   }
-  .slider__item:nth-child(3) {
-    display: none;
+  .slider {
+    width: 708px;
+  }
+  .slider__wrapper {
+    margin: 60px 12px;
+    width: 580px;
   }
   .help__wrapper {
     justify-content: space-between;
@@ -575,8 +681,35 @@ header {
   .hamburger {
     display: none;
   }
+  .modal__container {
+    width: 682px;
+    height: 402px;
+  }
+  .modal__window {
+    width: 630px;
+    height: 350px;
+  }
+  .modal__img {
+    width: 350px;
+    height: 350px;
+  }
+  .modal__info {
+    width: 260px;
+    height: 303px;
+    margin-left: 11px;
+    margin-top: 10px;
+    overflow: hidden;
+  }
+  .modal__info_descr {
+    margin-top: 20px;
+    font-size: 13px;
+    line-height: 110%;
+  }
+  .modal__ul {
+    margin-top: 20px;
+  }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .heading {
     font-size: 25px;
   }
@@ -585,7 +718,7 @@ header {
   }
   .container__main {
     width: 300px;
-    margin: 0;
+    margin: 0 auto;
   }
   .container__about {
     width: 300px;
@@ -618,9 +751,13 @@ header {
     height: 296px;
   }
   .logo__dog {
+    position: inherit;
+    display: block;
     width: 260px;
     height: 271.77px;
     right: 10px;
+    margin: 0 auto;
+    margin-top: 105px;
   }
   .about {
     height: 974px;
@@ -653,13 +790,26 @@ header {
     height: 791px;
   }
   .homeless__heading {
-    width: 100%;
+    width: 300px;
   }
-  .slider__item:nth-child(2) {
-    display: none;
+  .slider {
+    width: 270px;
+    flex-wrap: wrap;
+    height: 549px;
+    margin-bottom: 42px;
+  }
+  .slider__container {
+    width: 300px;
   }
   .slider__item {
+    margin: 0px auto;
+  }
+  .slider__wrapper {
+    height: 435px;
     margin: 42px auto 20px auto;
+  }
+  .slider__round {
+    margin-top: 0;
   }
   .help {
     height: 745px;
@@ -696,6 +846,7 @@ header {
   .donation__dog {
     width: 260px;
     margin-top: 42px;
+    height: 135.2px;
   }
   .donation__info {
     width: 100%;
@@ -721,9 +872,11 @@ header {
   .donation__legal {
     width: 280px;
     height: 90px;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
-@media (max-width: 1280px) {
+@media (max-width: 1279px) {
   .container__footer {
     width: 708px;
     flex-wrap: wrap;
@@ -754,7 +907,7 @@ header {
     margin-top: 33px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .container__footer {
     width: 300px;
   }
