--- a/src/pages/main/sass/_homeless.scss
+++ b/src/pages/main/sass/_homeless.scss
@@ -10,22 +10,30 @@
     }
 }
 .slider {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    margin: 0 auto;
     &__wrapper {
-        position: relative;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
-        overflow: hidden;
+        width: 990px;
         height: 435px;
-        margin: 60px 0;
+        margin: 60px 53px;
     }
     &__round{
-        position: absolute;
         width: 52px;
         height: 52px;
         border: 2px solid #F1CDB3;
         border-radius: 100px;
+        margin-top: 252px;
         cursor: pointer;
+        transition-duration: 0.3s;
+    }
+    &__round:hover {
+        background: #FDDCC4;
+        border:0;
     }
     &__next {
         right: 40px;
@@ -37,16 +45,18 @@
         text-align: center;
         color: #000;
         font-size: 20px;
-        transform: translateY(45%);
+        margin-top: 50%;
+        transform: translateY(-50%);
     }
     &__item {
-        position: absolute;
         width: 270px;
         max-height: 435px;
         background: #FAFAFA;
         border-radius: 9px;
         height: 435px;
-        transition-duration: 0s;
+        transition-duration: 0.5s;
+
+        cursor: pointer;
     }
     &__img {
         width: 100%;
@@ -77,7 +87,13 @@
         border-radius: 100px;
         background-color: #fff;
         margin: 0 auto;
+        transition-duration: 0.3s;
+
         cursor: pointer;
+    }
+    &__more:hover, &__more_active {
+        background: #FDDCC4;
+        border: 0;
     }
 }
 .btn__under-slider {
@@ -94,20 +110,10 @@
     line-height: 130%;  
     border: 0;
     margin: 0 auto;
+
     cursor: pointer;
 }
-.first-slide {
-    left: 25%;
-    transform: translateX(-50%);
-    transition-duration: 0.5s;
-}
-.second-slide {
-    left: 50%;
-    transform: translateX(-50%);
-    transition-duration: 0.5s;
-}
-.third-slide {
-    left: 75%;
-    transform: translateX(-50%);
-    transition-duration: 0.5s;
+.btn__under-slider:hover {
+    background: #FDDCC4;
+    border: 0;
 }
