pixel perfect & slider & modal complited

--- a/src/pages/main/sass/_about.scss
+++ b/src/pages/main/sass/_about.scss
@@ -8,14 +8,16 @@
     &__info {
         width: 430px;
         height: 380px;
+        padding: 15px 0px;
     }
     &__heading {
         width: 370px;
-        letter-spacing: 0.06em;
+        letter-spacing: 0.09em;
         color: #545454;
         font-size: 35px;
         margin-top: 0;
         margin-bottom: 0;
+
 
         font-family: 'Georgia', serif;
         font-style: normal;
