--- a/src/pages/main/sass/_help.scss
+++ b/src/pages/main/sass/_help.scss
@@ -4,6 +4,7 @@
     &__heading {
         text-align: center;
         margin: 0 auto;
+        letter-spacing: 0.09em;
     }
     &__wrapper {
         display: flex;
