--- a/src/pages/main/sass/_homeless.scss
+++ b/src/pages/main/sass/_homeless.scss
@@ -7,6 +7,7 @@
         display: block;
         text-align: center;
         margin: 0 auto;
+        letter-spacing: 0.09em;
     }
 }
 .slider {
@@ -110,6 +111,7 @@
     line-height: 130%;  
     border: 0;
     margin: 0 auto;
+    letter-spacing: 0.09em;
 
     cursor: pointer;
 }
