--- a/src/pages/main/sass/_footer.scss
+++ b/src/pages/main/sass/_footer.scss
@@ -9,20 +9,24 @@
     &__info {
         max-width: 310px;
         height: 234px;
+        &_left {
+            transform: translateX(-10px);
+        }
     }
     &__heading {
-        width: 100%;
+        width: 300px;
         color: #fff;
         margin: 16px 0px 0px 0px;
+        letter-spacing: 0.09em;
     }
     &__text {
         padding-left: 20px;
         font-family: 'Georgia';
         font-style: normal;
         font-weight: 400;
-        font-size: 19px;
+        font-size: 20px;
         line-height: 115%;
-        letter-spacing: 0.06em;
+        letter-spacing: 0.09em;
         color: #F1CDB3;
         margin-top: 5px;
     }
@@ -31,14 +35,19 @@
     }
     &__dog {
         display: block;
-        margin-left: 160px;
     }
 }
 .item {
     display: flex;
     margin-top: 40px;
+    cursor: pointer;
+    &_second {
+        margin-top: 30px;
+    }
 }
-.footer__info:last-child {
-    margin-left: 160px;
+.item_mt40{
+    margin-top: 40px;
+}
+.footer__info:nth-child(2) {
     width: 310px;
 }
