--- a/src/pages/pets/css/style.css
+++ b/src/pages/pets/css/style.css
@@ -18,7 +18,6 @@ h5 {
 
 a {
   text-decoration: none;
-  color: #545454;
 }
 
 .hide {
@@ -59,16 +58,17 @@ a {
 }
 
 .hamburger {
-  position: absolute;
+  position: fixed;
   display: none;
   color: #F1CDB3;
   width: 30px;
-  height: 22px;
-  top: 40px;
-  right: 20%;
-  font-size: 40px;
+  height: 35px;
+  top: 49px;
+  right: 53px;
+  font-size: 34px;
   transition-duration: 0.3s;
   z-index: 30;
+  transform: translate3d(10px, -10px, 0px);
   cursor: pointer;
 }
 
@@ -76,7 +76,7 @@ a {
   position: fixed;
   top: 0;
   right: 0;
-  width: 100%;
+  width: 320px;
   height: 100%;
   background: #292929;
   padding: 10px;
@@ -468,7 +468,7 @@ header {
 }
 
 .friends {
-  height: 1342px;
+  max-height: 1342px;
   background: #F6F6F6;
 }
 .friends__title {
@@ -489,7 +489,7 @@ header {
   justify-content: space-between;
   width: 1200px;
   margin: 0 auto;
-  height: 930px;
+  max-height: 930px;
   margin-top: 45px;
   align-content: space-between;
   padding: 15px 0px;
@@ -670,12 +670,12 @@ li {
     margin-top: 0px;
   }
   .friends {
-    height: 1733px;
+    max-height: 1733px;
   }
   .friends__wrapper {
     margin-top: 30px;
     width: 580px;
-    height: 1365px;
+    max-height: 1365px;
   }
   .friends .slider__item {
     margin: 0;
@@ -764,7 +764,7 @@ li {
     color: #FAFAFA;
   }
   .friends {
-    height: 1649px;
+    max-height: 1649px;
   }
   .friends__wrapper {
     width: 270px;
@@ -778,5 +778,8 @@ li {
   .arrows {
     width: 300px;
     margin-top: 0;
+  }
+  .hide {
+    display: none;
   }
 }
