--- a/src/pages/main/sass/_main.scss
+++ b/src/pages/main/sass/_main.scss
@@ -12,10 +12,10 @@ main {
     font-style: normal;
     font-size: 44px;
     margin: 223px 0px 0px 0px;
-    max-width: 330px;
+    width: 360px;
     color: #fff;
     line-height: 130%;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.05em;
 }
 .main__subheading {
     width: 100%;
@@ -41,7 +41,7 @@ main {
         font-weight: 400;
         font-size: 17px;
         line-height: 130%;
-        letter-spacing: 0.06em;
+        letter-spacing: 0.04em;
     }
 }
 .btn__text {
