--- a/src/pages/pets/sass/_pets-header.scss
+++ b/src/pages/pets/sass/_pets-header.scss
@@ -5,6 +5,7 @@
         &__title {
             color: #545454;
             margin: 0;
+            width: 186px;
             a {
                 font-family: 'Georgia', serif;
                 font-size: 32px;
