hide menu btn if modal is open

--- a/src/pages/main/sass/_header.scss
+++ b/src/pages/main/sass/_header.scss
@@ -19,6 +19,7 @@ header {
         margin: 0;
         letter-spacing: 0.06em;
         cursor: pointer;
+        white-space: nowrap;
     }
     &__subtitle {
         width: 180px;
@@ -28,6 +29,7 @@ header {
         letter-spacing: 0.1em;
         margin-right: 0;
         margin-top: 10px;
+        white-space: nowrap;
     }
     &__dog {
         position: absolute;
