--- a/src/pages/main/css/style.css
+++ b/src/pages/main/css/style.css
@@ -65,10 +65,6 @@ a {
   text-decoration: none;
 }
 
-.hide {
-  display: none;
-}
-
 header {
   display: flex;
   margin: 0 auto;
@@ -92,6 +88,7 @@ header {
   margin: 0;
   letter-spacing: 0.06em;
   cursor: pointer;
+  white-space: nowrap;
 }
 .logo__subtitle {
   width: 180px;
@@ -101,6 +98,7 @@ header {
   letter-spacing: 0.1em;
   margin-right: 0;
   margin-top: 10px;
+  white-space: nowrap;
 }
 .logo__dog {
   position: absolute;
@@ -226,6 +224,7 @@ main {
   font-weight: 400;
   font-size: 17px;
   line-height: 130%;
+  white-space: nowrap;
 }
 
 .about {
@@ -1089,4 +1088,7 @@ li {
   .footer .item:nth-child(3) {
     transform: translateX(-10px);
   }
+}
+.hide {
+  display: none;
 }
